Bug 464594 - Selection Mode on long touch can cause involuntary drag & drop
Summary: Selection Mode on long touch can cause involuntary drag & drop
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: Selection Mode (other bugs)
Version First Reported In: 22.12.1
Platform: Gentoo Packages Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-21 13:41 UTC by smlanger
Modified: 2023-07-28 21:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description smlanger 2023-01-21 13:41:52 UTC
SUMMARY
Using long touch on a file / folder to enter selection mode with touchscreen occasionally will register as drag & drop on touch release even though touch position was not changed.

STEPS TO REPRODUCE
1. hold touch on file or folder
2. Selection Mode activates
3. release touch

OBSERVED RESULT
occasionally the drag & drop dialog shows up

EXPECTED RESULT
no action on touch release beyond activating Selection Mode

SOFTWARE/OS VERSIONS
Linux Kernel: 6.1.7
KDE Plasma Version: 5.26.5
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
I suspect this is caused by the popup that shows up above the file list when entering Selection Mode. This popup will shift the file list while touch his still held possibly moving the file beyond the touch position.
Comment 1 smlanger 2023-04-01 22:54:00 UTC
Happens just the same with:
Dolphin 22.12.3
Linux Kernel: 6.1.22
KDE Plasma Version: 5.27.3
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8

First report was using X11 this update was using Wayland.
Comment 2 Bug Janitor Service 2023-05-24 14:58:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/552
Comment 3 Bug Janitor Service 2023-07-09 07:34:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/571
Comment 4 Felix Ernst 2023-07-27 09:23:10 UTC
Git commit 3123c086a77c28730866e848178c7e2d9a9006cb by Felix Ernst, on behalf of Steffen Hartleib.
Committed on 27/07/2023 at 11:23.
Pushed by felixernst into branch 'master'.

Avoid unwanted drag and drop action

Use the screen position for a touch event to calculate the start drag distance.

M  +26   -23   src/kitemviews/kitemlistcontroller.cpp
M  +1    -1    src/kitemviews/kitemlistcontroller.h

https://invent.kde.org/system/dolphin/-/commit/3123c086a77c28730866e848178c7e2d9a9006cb