Avoid unwanted drag and drop action

Use the screen position for a touch event to calculate the start drag distance.

BUG: 464594